--- a/package.json
+++ b/package.json
@@ -16,5 +16,11 @@
   "repository": {
     "type": "git",
     "url": "https://github.com/anvaka/ngraph.pagerank"
+  },
+  "dependencies": {
+    "tap": "^0.5.0"
+  },
+  "devDependencies": {
+    "ngraph.fromdot": "^0.1.0"
   }
 }
