--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "PageRank calculation for a ngraph.graph",
   "main": "index.js",
   "scripts": {
-    "test": "tap test/*.js"
+    "test": "tap test/*.js",
+    "start": "browserify demo/index.js > demo/bundle.js"
   },
   "keywords": [
     "pagerank",
@@ -18,7 +19,9 @@
     "url": "https://github.com/anvaka/ngraph.pagerank"
   },
   "devDependencies": {
-    "ngraph.fromdot": "^0.1.0",
+    "ngraph.fromdot": "0.1.0",
+    "ngraph.svg": "0.0.10",
+    "s.arrow": "^0.1.0",
     "tap": "^0.5.0"
   }
 }
