--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "url": "https://github.com/anvaka/ngraph.pagerank"
   },
   "devDependencies": {
+    "benchmark": "^1.0.0",
     "ngraph.fromdot": "0.1.1",
+    "ngraph.generators": "0.0.13",
     "ngraph.svg": "0.0.11",
     "s.arrow": "^0.1.0",
     "tap": "^0.5.0"
