--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "tap test/*.js",
-    "start": "browserify demo/index.js > demo/bundle.js"
+    "start": "browserify demo/index.js > demo/bundle.js",
+    "perf": "npm version && node perf/test.js"
   },
   "keywords": [
     "pagerank",
