--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "0.1.3",
   "description": "PageRank calculation for a ngraph.graph",
   "main": "index.js",
+  "bin": {
+    "pagrank": "./bin/pagerank.js"
+  },
   "scripts": {
     "test": "tap test/*.js",
     "start": "browserify demo/index.js > demo/bundle.js",
@@ -27,5 +30,8 @@
     "ngraph.svg": "0.0.11",
     "s.arrow": "^0.1.0",
     "tap": "^0.5.0"
+  },
+  "dependencies": {
+    "ngraph.fromdot": "^0.1.3"
   }
 }
