--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ngraph.pagerank",
-  "version": "0.1.4",
+  "version": "2.0.0",
   "description": "PageRank calculation for a ngraph.graph",
   "main": "index.js",
   "bin": {
@@ -25,13 +25,12 @@
   },
   "devDependencies": {
     "benchmark": "^1.0.0",
-    "ngraph.fromdot": "0.1.3",
-    "ngraph.generators": "0.0.15",
+    "ngraph.generators": "^18.0.1",
     "ngraph.svg": "0.0.11",
     "s.arrow": "^0.1.0",
-    "tap": "^0.5.0"
+    "tap": "^14.1.11"
   },
   "dependencies": {
-    "ngraph.fromdot": "^0.1.3"
+    "ngraph.fromdot": "^5.0.0"
   }
 }
