--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "pagrank": "./bin/pagerank.js"
   },
   "scripts": {
-    "test": "tap test/*.js",
+    "test": "tap --branches=80 --lines=80 --statements=80 --functions=80 test/*.js",
     "start": "browserify demo/index.js > demo/bundle.js",
     "ffperf": "browserify perf/test.js > perf/spiderTest.js && $SPIDER_MONKEY -w ./perf/spiderTest.js",
     "perf": "npm version && node perf/test.js"
@@ -28,7 +28,7 @@
     "ngraph.generators": "^18.0.1",
     "ngraph.svg": "0.0.11",
     "s.arrow": "^0.1.0",
-    "tap": "^14.1.11"
+    "tap": "^15.0.9"
   },
   "dependencies": {
     "ngraph.fromdot": "^6.0.1"
