--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   },
   "devDependencies": {
     "benchmark": "^1.0.0",
+    "browserify": "^17.0.0",
     "ngraph.generators": "^18.0.1",
     "ngraph.svg": "0.0.11",
     "s.arrow": "^0.1.0",
